# slonogram

./: .flake8  .gitignore  .gitmodules  DETAILS.md  Justfile  LICENSE  README.md  ROADMAP.md  codegen_config.yaml  flake.nix  justfile  pyproject.toml
.modeus/schemas/: animation.yaml  audio.yaml  bot_command.yaml  bot_command_scope.yaml  bot_description.yaml  bot_name.yaml  bot_short_description.yaml  callback_game.yaml  callback_query.yaml  chat.yaml  chat_administrator_rights.yaml  chat_boost.yaml  chat_boost_added.yaml  chat_boost_removed.yaml  chat_boost_source.yaml  chat_boost_updated.yaml  chat_invite_link.yaml  chat_join_request.yaml  chat_location.yaml  chat_member.yaml  chat_member_updated.yaml  chat_permissions.yaml  chat_photo.yaml  (+93 more)
code_generation/: __main__.py
codegen/: run.py
examples/: 00001_command_line.py  000_hello_world.py  001_basic_callback.py  002_regex_filter.py  003_handler_marker.py  004_hierarchical_filters.py  005_primitive_fsm.py  006_simple_inline.py  007_media_group.py  008_hierarchical_stash.py  009_generic_marker.py  __main__.py  base.py  callback.py  di.py  di_example.py  edited_repeater.py  inline.py  repeater.py  test.py  test1.py  text.py  text_eq.py  utils.py
modeus/: __main__.py  args.py  executor.py  imports_tracker.py  spec.py  stage.py  subtypes_group.py  type_parser.py  utils.py
slonogram/: __init__.py  _methods.py  bot.py  const.py  consts.py  di.py  middleware.py  omittable.py  schemas.py  session.py  utils.py
test_helpers/: __init__.py  activation.py  message.py  update.py  user.py
trashcan/: dispatcher_ergonomics.py
(+448 files in other folders)
