[tool.poetry]
name = "slonogram"
version = "0.1.0"
description = "Extensible and powerful telegram bot library"
authors = ["Nero <nerodono0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
