[tool.poetry]
name = "slonogram"
version = "0.1.0"
description = "Extensible and powerful telegram bot library"
authors = ["Nero <nerodono0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.3.0"
aiohttp = { version = "^3.9.3", optional = true }

[tool.poetry.extras]
aiohttp = ["aiohttp"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
